# WP-Scoreboard

./: .gitignore  README.md  Scenes 1.SDProfile  Scenes 2.SDProfile  game_clock_labels.json  image_cropper.py  image_cropper_game_clock.py  label_dataset.py  label_dataset_game_clock.py  multiTimeline.csv  schedule.csv  scoreboard.py  scoreboard_control.py  teams.csv  train_game_clock_cnn.py  train_shot_clock_cnn.py
logos/: 404 Not Found.html
obs-scoreboard/: .gitignore  CMakeLists.txt  CONTROL_PANEL_INTEGRATION.cpp  INSTALLATION.md  LICENSE  README.md  build-direct.ps1  game_clock_transition_matrix.csv  shot_clock_transition_matrix.csv
obs-scoreboard/config/: teams.csv
obs-scoreboard/src/: averaged-frame-viz-source.cpp  averaged-frame-viz-source.h  clock-ocr-engine.cpp  clock-ocr-engine.h  control-panel.cpp  histogram-viz-source.cpp  histogram-viz-source.h  plugin-main.cpp  roi-selector-widget.cpp  roi-selector-widget.h  roster-source.cpp  schedule-source.cpp  scoreboard-source-simple.cpp  scoreboard-source.cpp  shared-schedule.h  websocket-server.cpp
players/: rpi.csv
templates/: config.html  intermission.html  ocr_config.html  ocr_pipeline.html  overlay.html  players.html  schedule.html
